Split main content into two use grid template to split main content into two sections that is navigation and content

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
             </div>
         </div>
         <div class="main">
-            <h1>WORLD</h1>
+            <div class="main-top"></div>
+            <div class="main-bottom"></div>
         </div>
     </div>
     
