Add announcement and trending card add content onto announce card and syle divider and padding of content,style images of trending

--- a/index.html
+++ b/index.html
@@ -166,36 +166,40 @@
                     </div>
                 </div>
                 <div class="mainbtm-right">
-                    <p>Announcements</p>
+                    <p id="announcement">Announcements</p>
                     <div class="announce-card">
                         <div class="announce-cnt">
                         <h4>Site Maintenance</h4>
                         <p> Lorem ipsum, dolor sit amet <br>
                             consectetur adipisicing elit. Ab <br>
                              quam rem facilis doloribus asperiores</p>
+                             <div class="divider"></div>
                         <h4>Community Share</h4>
                         <p> Lorem ipsum, dolor sit amet <br>
                             consectetur adipisicing elit. Ab <br>
                              quam rem facilis doloribus asperiores</p>
+                             <div class="divider"></div>
                         <h4>Privacy</h4>
                         <p> Lorem ipsum, dolor sit amet <br>
                             consectetur adipisicing elit. Ab <br>
                              quam rem facilis doloribus asperiores</p>
                         </div>
                     </div>
-                    <p>Trending</p>
+                    <p id="trending">Trending</p>
                     <div class="trending">
+                        <div class="trnd-pd">
                         <div class="trnd-card">
                             <img class="big-image" src="images/cat.jpeg" alt="">
-                            <p></p>
+                            <p>Morgan Oakley(@Morgan)</p>
                         </div>
-                        <div class="big-image" class="trnd-card">
-                            <img src="images/cat2.jpeg" alt="">
-                            <p></p>
+                        <div class="trnd-card">
+                            <img class="big-image" src="images/cat2.jpeg" alt="">
+                            <p>Elgato Orio(@Elgato)</p>
                         </div>
                         <div class="trnd-card">
                             <img class="big-image"src="images/dog1.webp" alt="">
-                            <p></p>
+                            <p>sphinx Demio(@sphinx)</p>
+                        </div>
                         </div>
 
                     </div>
